# modern_egfrd

./: .gitignore  CMakeLists.txt  CMakeSettings.json  INSTALL.md  Makefile  README.md  newGFRD.sln
GreensFunctions/: CylindricalBesselGenerator.cpp  CylindricalBesselGenerator.hpp  DefsGf.hpp  GreensFunction.hpp  GreensFunction1DAbsSinkAbs.cpp  GreensFunction1DRadAbs.cpp  GreensFunction1DRadAbs.hpp  GreensFunction2DRadAbs.cpp  GreensFunction3D.hpp  GreensFunction3DRadInf.hpp  GreensFunction3DSym.cpp  GreensFunction3DSym.hpp  SphericalBesselGenerator.cpp  SphericalBesselGenerator.hpp  freeFunctions.cpp  freeFunctions.hpp  greensfunctions.cd  greensfunctions.vcxproj  greensfunctions.vcxproj.filters  helperFunctionsGf.cpp  helperFunctionsGf.hpp
Support/Logger/: Logger.vcxproj  Logger.vcxproj.filters  Makefile
Support/RunGfrd/: Custom.hpp  Equilibrium.hpp  PowerSpectrum.hpp  RunGfrd.vcxproj  RunGfrd.vcxproj.filters  Simulation.hpp  getoptions.hpp  mapK.hpp
Support/SeedGenerator/: Makefile  SeedGenerator.cpp  SeedGenerator.vcxproj  SeedGenerator.vcxproj.filters
Support/genBesselTables/: Makefile  genBesselTables.cpp  (+2 more)
cmake/: CheckFeature.cmake  gfrd_compat.hpp.in  test-make_unique.cpp
doc/: notes on exprtk.txt  notes on model-files.txt
eGFRD/: BDPropagator.hpp  BDSimulator.hpp  Box.hpp  ClassDiagram.cd  ConnectivityContainer.hpp  CopyNumbers.hpp  CuboidalRegion.hpp  Cylinder.hpp  CylindricalSurface.hpp  Disk.hpp  EGFRDSimulator.cpp  EGFRDSimulator.hpp  Event.hpp  EventID.hpp  EventScheduler.hpp  InteractionRule.hpp  Matrix4.cpp  Matrix4.hpp  Multi.cpp  Pair.cpp  ParticleContainer.hpp  ParticleSimulator.hpp  Persistence.cpp  Persistence.hpp  PlanarSurface.cpp  PlanarSurface.hpp  Progress.hpp  Reactants.hpp  ReactionRecorder.hpp  ReactionRule.hpp  ReactionRuleCollection.hpp  SerialIDGenerator.hpp  Shapes.cd  Shell.hpp  ShellCreateUtils.hpp  SpeciesTypeID.hpp  Sphere.hpp  SphericalSurface.hpp  StructureContainer.hpp  StructureType.hpp  (+13 more)
src/: CMakeLists.txt
src/GreensFunctions/: CMakeLists.txt  CylindricalBesselGenerator.cpp  CylindricalBesselGenerator.hpp  DefsGf.hpp  GreensFunction.hpp  GreensFunction1DAbsAbs.cpp  GreensFunction1DAbsAbs.hpp  GreensFunction1DAbsSinkAbs.cpp  GreensFunction1DAbsSinkAbs.hpp  GreensFunction1DRadAbs.cpp  GreensFunction1DRadAbs.hpp  GreensFunction2DAbsSym.cpp  GreensFunction2DAbsSym.hpp  GreensFunction2DRadAbs.cpp  GreensFunction2DRadAbs.hpp  GreensFunction3D.cpp  GreensFunction3D.hpp  GreensFunction3DAbs.cpp  GreensFunction3DAbs.hpp  GreensFunction3DAbsSym.cpp  GreensFunction3DAbsSym.hpp  GreensFunction3DRadAbs.cpp  GreensFunction3DRadAbs.hpp  GreensFunction3DRadInf.cpp  GreensFunction3DRadInf.hpp  GreensFunction3DSym.hpp  Makefile  PairGreensFunction.hpp  SphericalBesselGenerator.cpp  SphericalBesselGenerator.hpp  freeFunctions.cpp  freeFunctions.hpp  helperFunctionsGf.cpp  helperFunctionsGf.hpp
src/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp  bitmask_operators.hpp
src/ModelEntry/: CMakeLists.txt  CopyNumbersSection.hpp  ParticlePositionsSection.hpp  ParticlesSection.hpp  ProgressSection.hpp  ReactionRecordSection.hpp  ReactionRuleSection.hpp  SectionBase.cpp  SectionBase.hpp  SimulatorSection.hpp  SimulatorSettings.cpp  SimulatorSettings.hpp  SpeciesTypeSection.hpp  StructureSection.hpp  StructureTypeSection.hpp  VariablesSection.cpp  VariablesSection.hpp  WorldSection.hpp
src/RunGfrd/: CMakeLists.txt  Custom.hpp  Makefile  Resume.hpp  Reversible.hpp  RunGfrd.cpp  RunGfrd.hpp  RunGfrd.vcxproj  SimCustom.hpp  SimModel.hpp  SimResume.hpp  Simulation.hpp  Simulation3P.hpp  getoptions.hpp  mapK.hpp
src/RunGfrd/ParseIni/: CopyNumbersSection.hpp  ParserExceptions.hpp  ParticlePositionsSection.hpp  ParticlesSection.hpp  ProgressSection.hpp  ReactionRecordSection.hpp  ReactionRuleSection.hpp  SectionBase.hpp  SimulatorSection.hpp  SimulatorSettings.hpp  SpeciesTypeSection.hpp  VariablesSection.cpp  VariablesSection.hpp  WorldSection.hpp
src/RunGfrd/Resources/: resource.rc.in
src/eGFRD/: BDPropagator.hpp  BDSimulator.hpp  Box.hpp  CMakeLists.txt  ConnectivityContainer.hpp  CopyNumbers.hpp  CuboidalRegion.hpp  Cylinder.hpp  CylindricalSurface.hpp  Debug.natvis  DefsEgfrd.hpp  Disk.hpp  DiskSurface.hpp  Domain.hpp  DomainID.hpp  DynamicPriorityQueue.hpp  EGFRDSimulator.hpp  Event.hpp  EventID.hpp  EventScheduler.hpp  GreenFunctionHelpers.hpp  Identifier.hpp  InteractionRule.hpp  Makefile  Matrix4.cpp  Matrix4.hpp  MatrixSpace.hpp  Model.hpp  Multi.hpp  Pair.cpp  Pair.hpp  Particle.hpp  ParticleContainer.hpp  ParticleContainerImpl.hpp  ParticleID.hpp  ParticleSimulator.hpp  Persistence.cpp  Persistence.hpp  PlanarSurface.hpp  Plane.hpp  (+36 more)
src/gfrdVisualizer/: CMakeLists.txt  CameraController.hpp  ExternalSim.cpp  ExternalSim.hpp  Makefile  Resource.rc  ScreenShot.cpp  ScreenShot.hpp  gfrdRenderer.cpp  gfrdRenderer.hpp  gfrdVisualizer.cpp
src/gfrdVisualizer/Resources/: resource.rc.in
test/: CMakeLists.txt
test/TestGFRD/: BDSimulator_test.hpp  Box_test.cpp  Box_test.hpp  CMakeLists.txt  Cylinder_test.cpp  Cylinder_test.hpp  Disk_test.cpp  Disk_test.hpp  EventScheduler_test.cpp  EventScheduler_test.hpp  GenericIterator_test.hpp  Identifier_test.hpp  MatrixSpace_test.cpp  MatrixSpace_test.hpp  Model_test.hpp  ParticleContainer_test.hpp  ParticleSimulator_test.hpp  Persistence_test.cpp  Persistence_test.hpp  Plane_test.cpp  Plane_test.hpp  Single_test.cpp  Single_test.hpp  Sphere_test.cpp  Sphere_test.hpp  TestGFRD.vcxproj  TestGFRD.vcxproj.filters  TestSimple.cpp  TestSimple.hpp  Vector2_test.cpp  Vector2_test.hpp  Vector3_test.cpp  Vector3_test.hpp  World_test.hpp  tinytest.cpp
test/TestGreensFunctions/: CMakeLists.txt  CylindricalBesselGenerator_test.hpp  Factorial_test.hpp  GreensFunction3DAbsSym_test.hpp  GreensFunction3DAbs_test.cpp  GreensFunction3DAbs_test.hpp  GreensFunction3DRadAbs_test.cpp  GreensFunction3DRadAbs_test.hpp  GreensFunction3DRadInf_test.hpp  GreensFunction3D_test.hpp  GslSumLevinU_test.hpp  SphericalBesselGenerator_test.cpp  SphericalBesselGenerator_test.hpp  TestGreensFunctions.vcxproj  tinytest.cpp
(+88 files in other folders)
